--- a/pom.xml
+++ b/pom.xml
@@ -40,9 +40,11 @@
     
     
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-            	
-  
-  
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+
+
+
+
   </properties>
       	
   
