--- a/lab-server/pom.xml
+++ b/lab-server/pom.xml
@@ -64,6 +64,12 @@
 			<artifactId>lab-common</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.3.3</version>
+		</dependency>
+
 
 	</dependencies>
 
